[project]
name = "pyinfra-lxd-api-connector"
version = "0.1.0"
description = "pyinfra connector targeting LXD containers via the LXD HTTPS API (no SSH hop, no CLI subprocess, no websockets)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Christian Rishøj", email = "christian@rishoj.net" },
]
dependencies = [
    "pyinfra>=3,<4",
    "httpx>=0.27",
    "pyyaml>=6",
]

[project.entry-points."pyinfra.connectors"]
lxd_api = "pyinfra_lxd_api_connector:LxdApiConnector"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["pyinfra_lxd_api_connector"]
